# FFmpegCode

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/bbt2000/ffmpegcode/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bbt2000/ffmpegcode/: MainActivity.kt
app/src/main/java/com/bbt2000/ffmpegcode/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/bbt2000/ffmpegcode/: ExampleUnitTest.kt
ffmpeg/: build.gradle.kts
ffmpeg/src/androidTest/java/com/bbt2000/ffmpeg/: ExampleInstrumentedTest.kt
ffmpeg/src/main/cpp/: .gitignore  CMakeLists.txt  build.sh  build_ffmpeg_android.sh  config.h  config_android.sh  config_components.h  config_mac.sh
ffmpeg/src/main/cpp/fftools/: Makefile
ffmpeg/src/main/cpp/libavcodec/: CMakeLists.txt
ffmpeg/src/main/cpp/libavdevice/: CMakeLists.txt
ffmpeg/src/main/cpp/libavfilter/: CMakeLists.txt
ffmpeg/src/main/cpp/libavformat/: CMakeLists.txt
ffmpeg/src/main/cpp/libavutil/: CMakeLists.txt
ffmpeg/src/main/cpp/libswresample/: CMakeLists.txt
ffmpeg/src/main/cpp/libswscale/: CMakeLists.txt
ffmpeg/src/main/cpp/tools/: CMakeLists.txt
ffmpeg/src/main/java/com/bbt2000/ffmpeg/: NativeLib.kt
ffmpeg/src/test/java/com/bbt2000/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
